# lorelog-api

./: .gitignore  Dockerfile  README.md  pyproject.toml  serve.py  wsgi.py
db/sqlite/migrations/: 0.up.sql  1.up.sql  2.up.sql
src/llwsgi/: uwsgi.ini
src/lore_log/: __init__.py  characters.py  chronicle.py  factions.py  model.py  places.py  relationships.py  resource.py  things.py  users.py  utils.py
